# vibe-vault

./: CLAUDE.md  README.md
contracts/: AaveMidasStrategy.vy  README.md  VaultManager.vy  kGOLDt.vy
contracts/interfaces/: IStrategy.vyi
cosmwasm/harvest_job/: Cargo.toml
cosmwasm/harvest_job/src/: contract.rs  error.rs  msg.rs  state.rs
docs/: Cross-Chain Leveraged Perpetual Vault.md  Kalani for Yearn Vault Management.md  Legion_ICO_Proposal_Vibe_Vault.md  MetaDAO_ICO_Proposal_Vibe_Vault.md  Omnipair_Proposal #31 to MetaDAO has passed.md  Vibe_Vault_Legion_Pitch_Deck.md  Vibe_Vault_Legion_Pitch_Deck.pptx  brainstorm.md  docs.metadao.fi_.2025-10-23T06_59_46.854Z.md  kGOLDt - Ultra TL;DR Build Spec.md  paloma_lightNode.md  palomachain_docs.md  yearn_metrics.md
